--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node ./out/index.js",
+    "reset": "rm -rf out/ && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,9 +22,19 @@
   },
   "homepage": "https://github.com/nuggylib/minecraft-asset-reader#readme",
   "devDependencies": {
+    "@types/inquirer": "^7.3.1",
+    "@types/node": "^14.14.33",
+    "ts-node": "^9.1.1",
+    "typedoc": "^0.20.30",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "esm": "^3.2.25"
+    "arg": "^5.0.0",
+    "boxen": "^5.0.0",
+    "chalk": "^4.1.0",
+    "esm": "^3.2.25",
+    "ink": "^3.0.8",
+    "inquirer": "^8.0.0",
+    "react": "^17.0.1"
   }
 }
