--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/nuggylib/minecraft-asset-reader#readme",
   "devDependencies": {
     "@types/inquirer": "^7.3.1",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.33",
     "ts-node": "^9.1.1",
     "typedoc": "^0.20.30",
