--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "minecraft-asset-reader",
   "version": "1.0.0",
   "description": "Read in textures from a minecraft texture pack",
-  "main": "out/index.js",
+  "main": "out/CLIApp.js",
   "bin": {
     "minecraft-asset-reader": "bin/script.sh"
   },
@@ -22,21 +22,44 @@
   },
   "homepage": "https://github.com/nuggylib/minecraft-asset-reader#readme",
   "devDependencies": {
+    "@types/ink-big-text": "^1.2.0",
+    "@types/ink-divider": "^2.0.1",
+    "@types/ink-gradient": "^2.0.1",
     "@types/inquirer": "^7.3.1",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.33",
+    "@types/node-emoji": "^1.8.1",
+    "@types/node-fetch": "^2.5.8",
+    "@types/react": "^17.0.3",
+    "@types/redis": "^2.8.28",
     "ts-node": "^9.1.1",
     "typedoc": "^0.20.30",
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@types/express": "^4.17.11",
     "arg": "^5.0.0",
+    "body-parser": "^1.19.0",
     "boxen": "^5.0.0",
     "chalk": "^4.1.0",
+    "dotenv": "^8.2.0",
     "esm": "^3.2.25",
+    "express": "^4.17.1",
     "ink": "^3.0.8",
+    "ink-big-text": "^1.2.0",
+    "ink-divider": "^3.0.0",
+    "ink-gradient": "^2.0.0",
+    "ink-select-input": "^4.2.0",
+    "ink-spinner": "^4.0.1",
+    "ink-text-input": "^4.0.1",
     "inquirer": "^8.0.0",
     "lodash": "^4.17.21",
-    "react": "^17.0.1"
+    "ngrok": "^3.4.1",
+    "node-emoji": "^1.10.0",
+    "node-fetch": "^2.6.1",
+    "open": "^8.0.2",
+    "react": "^17.0.1",
+    "redis": "^3.0.2",
+    "util": "^0.12.3"
   }
 }
