--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/ink-gradient": "^2.0.1",
     "@types/inquirer": "^7.3.1",
     "@types/lodash": "^4.14.168",
+    "@types/mkdirp": "^1.0.1",
     "@types/node": "^14.14.33",
     "@types/node-emoji": "^1.8.1",
     "@types/node-fetch": "^2.5.8",
@@ -54,6 +55,7 @@
     "ink-text-input": "^4.0.1",
     "inquirer": "^8.0.0",
     "lodash": "^4.17.21",
+    "mkdirp": "^1.0.4",
     "ngrok": "^3.4.1",
     "node-emoji": "^1.10.0",
     "node-fetch": "^2.6.1",
