--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "arg": "^5.0.0",
     "body-parser": "^1.19.0",
     "boxen": "^5.0.0",
+    "canvas": "^2.7.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
