--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "scripts": {
     "build": "tsc",
     "reset": "rm -rf out/ generated/ && npm run build",
-    "lint:commit": "prettier-eslint \"src/**/*.{ts,tsx}\" --eslint-config-path=.eslintrc.yml --write",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:commit": "prettier-eslint \"{src/**/*,test/**/*}.{ts,tsx}\" --eslint-config-path=.eslintrc.yml --write",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "prepare": "husky install"
   },
   "repository": {
@@ -24,21 +25,26 @@
   },
   "homepage": "https://github.com/nuggylib/minecraft-asset-reader#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
     "@emotion/eslint-plugin": "^11.2.0",
     "@types/ink-big-text": "^1.2.0",
     "@types/ink-divider": "^2.0.1",
     "@types/ink-gradient": "^2.0.1",
     "@types/inquirer": "^7.3.1",
+    "@types/jest": "^26.0.22",
     "@types/lodash": "^4.14.168",
     "@types/mkdirp": "^1.0.1",
     "@types/node": "^14.14.33",
     "@types/node-emoji": "^1.8.1",
     "@types/node-fetch": "^2.5.8",
     "@types/react": "^17.0.3",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-react-app": "^6.0.0",
@@ -48,8 +54,11 @@
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "prettier-eslint-cli": "^5.0.1",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typedoc": "^0.20.30",
     "typescript": "^4.2.3"
