--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react": "^17.0.3",
     "@types/react-test-renderer": "^17.0.1",
     "@types/redis": "^2.8.28",
+    "@types/sharp": "^0.28.0",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "babel-eslint": "^10.1.0",
@@ -94,6 +95,7 @@
     "open": "^8.0.2",
     "react": "^17.0.1",
     "redis": "^3.0.2",
+    "sharp": "^0.28.1",
     "util": "^0.12.3"
   }
 }
