--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@babel/preset-react": "^7.13.13",
     "@emotion/eslint-plugin": "^11.2.0",
     "@testing-library/react-hooks": "^5.1.1",
+    "@types/cors": "^2.8.10",
+    "@types/express-paginate": "^1.0.0",
     "@types/ink-big-text": "^1.2.0",
     "@types/ink-divider": "^2.0.1",
     "@types/ink-gradient": "^2.0.1",
@@ -71,9 +73,11 @@
     "boxen": "^5.0.0",
     "canvas": "^2.7.0",
     "chalk": "^4.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-paginate": "^1.0.2",
     "ink": "^3.0.8",
     "ink-big-text": "^1.2.0",
     "ink-divider": "^3.0.0",
