--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean": "rm -rf out/ generated/ dist/",
     "reset": "yarn clean && npm run build",
     "lint:commit": "prettier-eslint \"{src/**/*,test/**/*}.{ts,tsx}\" --eslint-config-path=.eslintrc.yml --write",
-    "test": "jest --verbose",
+    "test": "jest --verbose=false",
     "coverage": "jest --coverage",
     "prepare": "husky install",
     "start": "LOCAL=true ts-node ./src/main.tsx"
