--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
+    "husky": ">=6",
     "jest": "^26.6.3",
+    "lint-staged": ">=10",
     "prettier": "^2.2.1",
     "prettier-eslint-cli": "^5.0.1",
     "react-test-renderer": "^17.0.2",
@@ -69,6 +70,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@sanity/client": "^2.8.0",
     "@types/express": "^4.17.11",
     "arg": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -98,5 +100,11 @@
     "react": "^17.0.1",
     "redis": "^3.0.2",
     "util": "^0.12.3"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,md,yml,yaml}": [
+      "yarn lint:commit",
+      "git add"
+    ]
   }
 }
