Image upload appears to be working but needs schema

--- a/package.json
+++ b/package.json
@@ -103,8 +103,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,md,yml,yaml}": [
-      "yarn lint:commit",
-      "git add"
+      "yarn lint:commit"
     ]
   }
 }
