--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "minecraft-asset-reader",
   "version": "0.1.0-alpha",
   "description": "Read in textures from a minecraft texture pack",
-  "main": "out/CLIApp.js",
+  "main": "out/main.js",
   "bin": {
     "minecraft-asset-reader": "bin/script.sh"
   },
