--- a/package.json
+++ b/package.json
@@ -2,19 +2,16 @@
   "name": "minecraft-asset-reader",
   "version": "0.1.0-alpha",
   "description": "Read in textures from a minecraft texture pack",
-  "main": "out/main.js",
   "bin": {
     "minecraft-asset-reader": "bin/script.sh"
   },
   "scripts": {
-    "build": "tsc",
     "clean": "rm -rf out/ generated/ dist/",
     "reset": "yarn clean && npm run build",
-    "lint:commit": "prettier-eslint \"{src/**/*,test/**/*}.{ts,tsx}\" --eslint-config-path=.eslintrc.yml --write",
-    "test": "jest --verbose=false",
-    "coverage": "jest --coverage",
+    "lint:commit": "prettier-eslint \"{src/**/*,test/**/*,packages/**/*}.{ts,tsx}\" --eslint-config-path=.eslintrc.yml --write",
     "prepare": "husky install",
-    "start": "LOCAL=true ts-node ./src/main.tsx"
+    "start:cli": "lerna exec --scope 'minecraft-asset-reader' yarn start",
+    "build:cli": "lerna exec --scope 'minecraft-asset-reader' yarn build"
   },
   "repository": {
     "type": "git",
@@ -63,43 +60,14 @@
     "lint-staged": ">=10",
     "prettier": "^2.2.1",
     "prettier-eslint-cli": "^5.0.1",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "^16.8.2",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typedoc": "^0.20.30",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@sanity/client": "^2.8.0",
-    "@types/express": "^4.17.11",
-    "arg": "^5.0.0",
-    "body-parser": "^1.19.0",
-    "boxen": "^5.0.0",
-    "canvas": "^2.7.0",
-    "chalk": "^4.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "esm": "^3.2.25",
-    "express": "^4.17.1",
-    "express-paginate": "^1.0.2",
-    "ink": "^3.0.8",
-    "ink-big-text": "^1.2.0",
-    "ink-divider": "^3.0.0",
-    "ink-gradient": "^2.0.0",
-    "ink-select-input": "^4.2.0",
-    "ink-spinner": "^4.0.1",
-    "ink-text-input": "^4.0.1",
-    "inquirer": "^8.0.0",
-    "lodash": "^4.17.21",
-    "mkdirp": "^1.0.4",
-    "ngrok": "^3.4.1",
-    "node-cache": "^5.1.2",
-    "node-emoji": "^1.10.0",
-    "node-fetch": "^2.6.1",
-    "open": "^8.0.2",
-    "react": "^17.0.1",
-    "redis": "^3.0.2",
-    "util": "^0.12.3"
+    "minecraft-asset-reader": "file:packages/cli"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,md,yml,yaml}": [
