--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
   },
   "dependencies": {
     "minecraft-asset-reader": "file:packages/cli",
-    "minecraft-asset-reader-webapp": "file:packages/client"
+    "minecraft-asset-reader-webapp": "file:packages/client",
+    "unzipper": "^0.10.11"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,md,yml,yaml}": [
