--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,7 +46,6 @@
     "ink-spinner": "^4.0.1",
     "ink-text-input": "^4.0.1",
     "inquirer": "^8.0.0",
-    "lerna": "^4.0.0",
     "lodash": "^4.17.21",
     "mkdirp": "^1.0.4",
     "ngrok": "^3.4.1",
@@ -56,6 +55,11 @@
     "open": "^8.0.2",
     "react": "^16.8.2",
     "redis": "^3.0.2",
+    "sqlite": "^4.0.21",
+    "sqlite3": "^4.2.0",
     "util": "^0.12.3"
+  },
+  "devDependencies": {
+    "@types/sqlite3": "^3.1.7"
   }
 }
