--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,6 +60,8 @@
     "util": "^0.12.3"
   },
   "devDependencies": {
+    "@types/ink-select-input": "^3.0.0",
+    "@types/node": "^15.0.2",
     "@types/unzipper": "^0.10.3"
   }
 }
