--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "reset": "yarn clean && npm run build",
     "lint:commit": "prettier-eslint \"{src/**/*,test/**/*,packages/**/*}.{ts,tsx}\" --eslint-config-path=.eslintrc.yml --write",
     "prepare": "husky install",
+    "reset-db": "rm -rf /tmp/minecraft-asset-reader",
     "start:cli": "lerna exec --scope 'minecraft-asset-reader' yarn start",
     "build:cli": "lerna exec --scope 'minecraft-asset-reader' yarn build",
     "start:client": "lerna exec --scope 'minecraft-asset-reader-webapp' yarn start",
