--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -57,9 +57,11 @@
     "redis": "^3.0.2",
     "sqlite": "^4.0.21",
     "sqlite3": "^4.2.0",
+    "unzipper": "^0.10.11",
     "util": "^0.12.3"
   },
   "devDependencies": {
-    "@types/sqlite3": "^3.1.7"
+    "@types/sqlite3": "^3.1.7",
+    "@types/unzipper": "^0.10.3"
   }
 }
