--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "lint:commit": "prettier-eslint \"{src/**/*,test/**/*,packages/**/*}.{ts,tsx}\" --eslint-config-path=.eslintrc.yml --write",
     "prepare": "husky install",
     "reset-db": "rm -rf /tmp/minecraft-asset-reader",
+    "build-app": "yarn build:cli && yarn build:client",
+    "run-app": "node out/cli/src/main.js",
     "start:cli": "lerna exec --scope 'minecraft-asset-reader' yarn start",
-    "build:cli": "lerna exec --scope 'minecraft-asset-reader' yarn build",
+    "build:cli": "lerna exec --scope 'minecraft-asset-reader' yarn build && cd out/ && rm -rf client/ && cd .. && cp packages/cli/package.json out/cli && cd out/cli && npm install",
     "start:client": "lerna exec --scope 'minecraft-asset-reader-webapp' yarn start",
-    "build:client": "lerna exec --scope 'minecraft-asset-reader-webapp' yarn build"
+    "build:client": "lerna exec --scope 'minecraft-asset-reader-webapp' yarn build && cp -r packages/client/build out && rm -rf packages/client/build"
   },
   "repository": {
     "type": "git",
