Show extract progress loading indicator (#91)

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "lint:commit": "prettier-eslint \"{src/**/*,test/**/*,packages/**/*}.{ts,tsx}\" --eslint-config-path=.eslintrc.yml --write",
     "prepare": "husky install",
     "reset-db": "rm -rf /tmp/minecraft-asset-reader",
+    "run-app": "LOCAL_BUILD=true node out/cli/src/main.js",
     "build-app": "yarn build:cli && yarn build:client",
-    "run-app": "node out/cli/src/main.js",
     "start:cli": "lerna exec --scope 'minecraft-asset-reader' yarn start",
     "build:cli": "lerna exec --scope 'minecraft-asset-reader' yarn build && cd out/ && rm -rf client/ && cd .. && cp packages/cli/package.json out/cli && cd out/cli && npm install",
     "start:client": "lerna exec --scope 'minecraft-asset-reader-webapp' yarn start",
