--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "clean": "rm -rf out/ dist/ node_modules packages/cli/node_modules packages/client/node_modules",
     "reset": "yarn clean && yarn && yarn lerna bootstrap && cd packages/cli && yarn && cd ../client && yarn",
+    "clear-db": "rm -rf /tmp/minecraft-asset-reader",
     "lint:commit": "prettier-eslint \"{src/**/*,test/**/*,packages/**/*}.{ts,tsx}\" --eslint-config-path=.eslintrc.yml --write",
     "prepare": "husky install",
     "reset-db": "rm -rf /tmp/minecraft-asset-reader",
