--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*", "src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "client", "out"],
   "compilerOptions": {
     "jsx": "react",
